--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Reposi3</title>
+  <title>Shadow Repo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Reposi3</h1>
+	<h1><img src="CydiaIcon.png"> Shadow Repo</h1>
 </div>
 
 <div class="container">
