--- a/root/index.html
+++ b/root/index.html
@@ -17,9 +17,9 @@
 <div class="container">
 	<div class="background">
 		<p><span class="text-primary"><b>Shadow Repo</span></b></p>
-		<a class="btn" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://shad0w999.github.io/shadowrepo">Add to Cydia</a>
-		<a class="btn" href="sileo://source/https://shad0w999.github.io/shadowrepo/">Add to Sileo</a>
-		<a class="btn" href="zbra://sources/add/https://shad0w999.github.io/shadowrepo/">Add to Zebra</a>
+		<a class="btn" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://shad0w999.github.io/shadowrepo/root/">Add to Cydia</a>
+		<a class="btn" href="sileo://source/https://shad0w999.github.io/shadowrepo/root/">Add to Sileo</a>
+		<a class="btn" href="zbra://sources/add/https://shad0w999.github.io/shadowrepo/root/">Add to Zebra</a>
 	</div>
 </div>
 </body>
