--- a/shadowrepo/rootless/index.html
+++ b/shadowrepo/rootless/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Shadow Repo(Root)</title>
+  <title>Shadow Repo(Rootless)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -11,12 +11,12 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Shadow Repo</h1>
+	<h1><img src="CydiaIcon.png"> Shadow Repo(Rootless)</h1>
 </div>
 
 <div class="container">
 	<div class="background">
-		<p><span class="text-primary"><b>Shadow Repo</span></b></p>
+		<p><span class="text-primary"><b>Shadow Repo(Rootless)</span></b></p>
 		<a class="btn" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://shad0w999.github.io/ProjectShadow/shadowrepo/rootless/">Add to Cydia</a>
 		<a class="btn" href="sileo://source/https://shad0w999.github.io/ProjectShadow/shadowrepo/rootless/">Add to Sileo</a>
 		<a class="btn" href="zbra://sources/add/https://shad0w999.github.io/shadowrepo/rootless/">Add to Zebra</a>
