--- a/shadowrepo/root/index.html
+++ b/shadowrepo/root/index.html
@@ -11,12 +11,12 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Shadow Repo</h1>
+	<h1><img src="CydiaIcon.png">Shadow Repo(Root)</h1>
 </div>
 
 <div class="container">
 	<div class="background">
-		<p><span class="text-primary"><b>Shadow Repo</span></b></p>
+		<p><span class="text-primary"><b>Shadow Repo(Root)</span></b></p>
 		<a class="btn" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://shad0w999.github.io/projectshadow/shadowrepo/root/">Add to Cydia</a>
 		<a class="btn" href="sileo://source/https://shad0w999.github.io/projectshadow/shadowrepo/root/">Add to Sileo</a>
 		<a class="btn" href="zbra://sources/add/https://shad0w999.github.io/projectshadow/shadowrepo/root/">Add to Zebra</a>
