--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <h1>Project Shadow</h1>
 <h2>Project Shad0wRa1n</h2>
 <p>bootrom exploit for ipod nano 4g</p>
-<a>https://github.com/shad0w999/projectshadow/shad0wra1n</a>
+<a href="https://github.com/shad0w999/projectshadow/shad0wra1n">iPod Exploit</a>
 <h2>Cydia Shad0w Repo</h2>
 <p>repo with usefull tweaks</p>
-<a>https://shad0w999.github.io/ProjectShadow/shadowrepo/</a>
+<a href="https://shad0w999.github.io/ProjectShadow/shadowrepo/">cydia repo</a>
 </body>
 </html>
